syntax = "proto3";

package hello;

service Hello {
    rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message HelloRequest { }
message HelloReply {
    string message = 1;
}
